--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
-    "presets": ["next/babel"],
-    "plugins": [
-      [
-        "styled-components",
-        { "ssr": true, "displayName": true, "preprocess": false }
-      ]
-    ]
-  }
+  "presets": ["next/babel"],
+  "plugins": [
+    [
+      "styled-components",
+      { "ssr": true, "displayName": true, "preprocess": false }
+    ],
+    "inline-react-svg"
+  ]
+}
