--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.1",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
     "styled-reset": "^4.3.4"
